src/objects/Volunteer_Job__c.object
<CustomObject>
    <label>Volunteer Job</label>
    <nameField>
        <label>Volunteer Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Volunteer Jobs</relationshipLabel>
        <relationshipName>Volunteer_Jobs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Display_on_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this Volunteer Job will be included on the Available Volunteer Jobs Sites page.</inlineHelpText>
        <label>Display on Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Signup_Url__c</fullName>
        <description>If provided, the VolunteersJobListingFS page will redirect to this website when the user clicks on the Sign Up link on the page.  This allows you to advertise jobs that one must register for on another web site.</description>
        <inlineHelpText>The external registration site, if any, for this Job. If you include an External Signup URL, V4S redirects to the site from the Sign Up link on the Job Listing FS page.</inlineHelpText>
        <label>External Signup Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Shift__c</fullName>
        <label>First Shift</label>
        <summarizedField>Volunteer_Shift__c.Start_Date_Time__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, this Volunteer Job will not be included on the Volunteers Report Hours Sites page.</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <label>Location City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Information__c</fullName>
        <inlineHelpText>Additional details such as driving directions. Information in this field is included in automated email reminders.</inlineHelpText>
        <label>Location Information</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location_Street__c</fullName>
        <label>Location Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Zip_Postal_Code__c</fullName>
        <label>Location Zip/Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Completed_Hours__c</fullName>
        <inlineHelpText>Total number of Volunteer Hours with a Status of Completed. Hours with other status values aren&apos;t included.</inlineHelpText>
        <label>Number of Completed Hours</label>
        <summarizedField>Volunteer_Hours__c.Total_Hours_Worked__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Shifts__c</fullName>
        <label>Number of Shifts</label>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers_Still_Needed__c</fullName>
        <label># of Volunteers Still Needed</label>
        <summarizedField>Volunteer_Shift__c.Number_of_Volunteers_Still_Needed__c</summarizedField>
        <summaryForeignKey>Volunteer_Shift__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Volunteers__c</fullName>
        <inlineHelpText>The total number of volunteers for this Job who have at least one Volunteer Hours record with a status of either Completed or Confirmed.</inlineHelpText>
        <label>Number of Volunteers</label>
        <summarizedField>Volunteer_Hours__c.Number_of_Volunteers__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed, Completed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer_Job__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ongoing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ongoing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skills_Needed__c</fullName>
        <inlineHelpText>The skills the volunteer should have to do this Job.</inlineHelpText>
        <label>Skills Needed</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Computer usage</fullName>
                </value>
                <value>
                    <fullName>Manual Labor</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Event Planning</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>basic accounting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Website_Time_Zone__c</fullName>
        <inlineHelpText>The Time Zone used when displaying Shift times on Sites pages. You only need to set this if you want to override both the Time Zone set on the Site Guest User profile, and the Time Zone set on the Volunteers campaign.</inlineHelpText>
        <label>Volunteer Website Time Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimat</fullName>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                </value>
                <value>
                    <fullName>Asia/Saigon</fullName>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                </value>
                <value>
                    <fullName>Asia/Dacca</fullName>
                </value>
                <value>
                    <fullName>Asia/Yekaterinburg</fullName>
                </value>
                <value>
                    <fullName>Asia/Katmandu</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Display_on_Website__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Jobs</label>
    </listViews>
    <listViews>
        <fullName>Available_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Available Jobs</label>
    </listViews>
    <listViews>
        <fullName>Ongoing_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Campaign__c</columns>
        <columns>Number_of_Volunteers_Still_Needed__c</columns>
        <columns>Number_of_Completed_Hours__c</columns>
        <columns>Ongoing__c</columns>
        <columns>Inactive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Ongoing__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Inactive__c</field>
            <operation>notEqual</operation>
            <value>1</value>
        </filters>
        <label>Ongoing Jobs</label>
    </listViews>
    <validationRules>
        <fullName>ValidateExternalSignupUrl</fullName>
        <active>true</active>
        <description>Validates that the External Signup URL field begins with an expected URI Scheme.</description>
        <errorConditionFormula>NOT(OR(ISBLANK(External_Signup_Url__c), REGEX(External_Signup_Url__c,&quot;^(http|https|mailto).*&quot;)))</errorConditionFormula>
        <errorDisplayField>External_Signup_Url__c</errorDisplayField>
        <errorMessage>The External Signup Url value must begin with http, https, or mailto.</errorMessage>
    </validationRules>
</CustomObject>